# chain

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md  dev_from_bin.Dockerfile  genesis  genesis-wasm  pos_build.Dockerfile  pos_from_bin.Dockerfile  rococo_from_bin.Dockerfile  rust-toolchain.toml  wetee-rococo.json  x86_build.Dockerfile
docs/: run-docker.md  run-node.md  tee.md  testing-guide.md
docs/grants/: m1.md  milestone-1-documentation.md  milestone-1-test.md  milestone-2-documentation.md  milestone-2-test.md  milestone-3-documentation.md  milestone-3-test.md
docs/images/Grant/: WeTEE-To-Polkadot
hacks/: builder.Dockerfile  builder_docker.sh  builder_x86_docker.sh  dev.sh  dev_docker_from_local.sh  frame-weight-template.hbs  pos_docker.sh  pos_docker_from_local.sh  rococo_docker_from_local.sh  update.sh  weight.sh
meta/rococo/: genesis  genesis-wasm  wetee-3  wetee-rococo.json
native-nostd-hasher/src/: lib.rs
tools/chain-spec-builder/: Cargo.toml
tools/chain-spec-builder/src/: main.rs
tools/hash/: Cargo.toml
tools/hash/src/: main.rs
tools/subkey/: Cargo.toml
