[workspace]

exclude = ["native-nostd-hasher"]

members = [
  # POS
  "packages/node/node",
  "packages/node/runtime",
  "packages/pallets/wetee-org",
  "packages/pallets/wetee-sudo",
  "packages/pallets/wetee-gov",
  "packages/pallets/wetee-assets",
  "packages/pallets/wetee-guild",
  "packages/pallets/wetee-project",
  "packages/pallets/wetee-worker",
  "packages/pallets/wetee-rpc",
  "packages/pallets/wetee-rpc/runtime-api",
  "packages/pallets/wetee-treasury",
  "packages/pallets/wetee-app",
  "packages/pallets/wetee-task",            # 工具
  "packages/pallets/wetee-task",
  "packages/pallets/wetee-gpu",             # 工具
  # "tools/hash",
  # "tools/subkey",
  # "tools/chain-spec-builder",
  "packages/primitives",
]

resolver = "2"

[workspace.dependencies]
# Orml
orml-oracle = { git = "https://github.com/bifrost-finance/open-runtime-module-library", branch = "release-polkadot-v1.3.0", default-features = false }
orml-tokens = { git = "https://github.com/bifrost-finance/open-runtime-module-library", branch = "release-polkadot-v1.3.0", default-features = false }
orml-traits = { git = "https://github.com/bifrost-finance/open-runtime-module-library", branch = "release-polkadot-v1.3.0", default-features = false }
orml-unknown-tokens = { git = "https://github.com/bifrost-finance/open-runtime-module-library", branch = "release-polkadot-v1.3.0", default-features = false }
orml-utilities = { git = "https://github.com/bifrost-finance/open-runtime-module-library", branch = "release-polkadot-v1.3.0", default-features = false }
orml-xcm = { git = "https://github.com/bifrost-finance/open-runtime-module-library", branch = "release-polkadot-v1.3.0", default-features = false }
orml-xcm-support = { git = "https://github.com/bifrost-finance/open-runtime-module-library", branch = "release-polkadot-v1.3.0", default-features = false }
orml-xtokens = { git = "https://github.com/bifrost-finance/open-runtime-module-library", branch = "release-polkadot-v1.3.0", default-features = false }

# polkadot-sdk (wasm)
cumulus-client-collator = { version = "0.4.0", default-features = false }
cumulus-client-consensus-proposer = { version = "0.4.0", default-features = false }
cumulus-pallet-aura-ext = { version = "0.4.0", default-features = false }
cumulus-pallet-dmp-queue = { version = "0.4.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.4.0", default-features = false, features = [
  "parameterized-consensus-hook",
] }
cumulus-pallet-xcm = { version = "0.4.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.4.0", default-features = false }
cumulus-primitives-core = { version = "0.4.0", default-features = false }
cumulus-primitives-parachain-inherent = { version = "0.4.0", default-features = false }
cumulus-primitives-timestamp = { version = "0.4.0", default-features = false }
cumulus-primitives-utility = { version = "0.4.0", default-features = false }
cumulus-test-relay-sproof-builder = { version = "0.4.0", default-features = false }
frame-benchmarking = { version = "25.0.0", default-features = false }
frame-executive = { version = "25.0.0", default-features = false }
frame-support = { version = "25.0.0", default-features = false }
frame-system = { version = "25.0.0", default-features = false }
frame-system-benchmarking = { version = "25.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "23.0.0", default-features = false }
frame-try-runtime = { version = "0.31.0", default-features = false }
pallet-assets = { version = "26.0.0", default-features = false }
pallet-aura = { version = "24.0.0", default-features = false }
pallet-authority-discovery = { version = "25.0.0", default-features = false }
pallet-authorship = { version = "25.0.0", default-features = false }
pallet-babe = { version = "25.0.0", default-features = false }
pallet-bags-list = { version = "24.0.0", default-features = false }
pallet-balances = { version = "25.0.0", default-features = false }
pallet-bounties = { version = "24.0.0", default-features = false }
pallet-collator-selection = { version = "6.0.0", default-features = false }
pallet-collective = { version = "25.0.0", default-features = false }
pallet-conviction-voting = { version = "25.0.0", default-features = false }
pallet-democracy = { version = "25.0.0", default-features = false }
pallet-elections-phragmen = { version = "26.0.0", default-features = false }
pallet-grandpa = { version = "25.0.0", default-features = false }
pallet-identity = { version = "25.0.0", default-features = false }
pallet-im-online = { version = "24.0.0", default-features = false }
pallet-indices = { version = "25.0.0", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "13.0.0", default-features = false }
pallet-membership = { version = "25.0.0", default-features = false }
pallet-message-queue = { version = "28.0.0", default-features = false }
pallet-multisig = { version = "25.0.0", default-features = false }
pallet-preimage = { version = "25.0.0", default-features = false }
pallet-proxy = { version = "25.0.0", default-features = false }
pallet-ranked-collective = { version = "25.0.0", default-features = false }
pallet-recovery = { version = "25.0.0", default-features = false }
pallet-referenda = { version = "25.0.0", default-features = false }
pallet-root-testing = { version = "1.0.0", default-features = false }
pallet-scheduler = { version = "26.0.0", default-features = false }
pallet-session = { version = "25.0.0", default-features = false }
pallet-staking = { version = "25.0.0", default-features = false }
pallet-sudo = { version = "25.0.0", default-features = false }
pallet-timestamp = { version = "24.0.0", default-features = false }
pallet-tips = { version = "24.0.0", default-features = false }
pallet-transaction-payment = { version = "25.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "25.0.0", default-features = false }
pallet-treasury = { version = "24.0.0", default-features = false }
pallet-utility = { version = "25.0.0", default-features = false }
pallet-vesting = { version = "25.0.0", default-features = false }
pallet-whitelist = { version = "24.0.0", default-features = false }
pallet-xcm = { version = "4.0.0", default-features = false }
parachain-info = { package = "staging-parachain-info", version = "0.4.0", default-features = false }
polkadot-core-primitives = { version = "4.0.0", default-features = false }
polkadot-parachain-primitives = { version = "3.0.0", default-features = false }
polkadot-primitives = { version = "4.0.0", default-features = false }
polkadot-runtime-common = { version = "4.0.0", default-features = false }
polkadot-runtime-parachains = { version = "4.0.0", default-features = false }
sp-api = { version = "23.0.0", default-features = false }
sp-application-crypto = { version = "27.0.0", default-features = false }
sp-arithmetic = { version = "20.0.0", default-features = false }
sp-authority-discovery = { version = "23.0.0", default-features = false }
sp-block-builder = { version = "23.0.0", default-features = false }
sp-blockchain = { version = "25.0.0", default-features = false }
sp-consensus = { version = "0.29.0", default-features = false }
sp-consensus-aura = { version = "0.29.0", default-features = false }
sp-consensus-slots = { version = "0.29.0", default-features = false }
sp-core = { version = "25.0.0", default-features = false }
sp-debug-derive = { version = "12.0.0", default-features = false }
sp-externalities = { version = "0.23.0", default-features = false }
sp-inherents = { version = "23.0.0", default-features = false }
sp-io = { version = "27.0.0", default-features = false }
sp-keyring = { version = "28.0.0", default-features = false }
sp-keystore = { version = "0.31.0", default-features = false }
sp-maybe-compressed-blob = { version = "9.0.0", default-features = false }
sp-npos-elections = { version = "23.0.0", default-features = false }
sp-offchain = { version = "23.0.0", default-features = false }
sp-panic-handler = { version = "12.0.0", default-features = false }
sp-runtime = { version = "28.0.0", default-features = false }
sp-runtime-interface = { version = "21.0.0", default-features = false }
sp-session = { version = "24.0.0", default-features = false }
sp-staking = { version = "23.0.0", default-features = false }
sp-state-machine = { version = "0.32.0", default-features = false }
sp-std = { version = "12.0.0", default-features = false }
sp-storage = { version = "17.0.0", default-features = false }
sp-timestamp = { version = "23.0.0", default-features = false }
sp-tracing = { version = "14.0.0", default-features = false }
sp-transaction-pool = { version = "23.0.0", default-features = false }
sp-trie = { version = "26.0.0", default-features = false }
sp-version = { version = "26.0.0", default-features = false }
sp-wasm-interface = { version = "18.0.0", default-features = false }
sp-weights = { version = "24.0.0", default-features = false }
substrate-fixed = { git = "https://github.com/encointer/substrate-fixed", default-features = false }
xcm = { package = "staging-xcm", version = "4.0.0", default-features = false }
xcm-builder = { package = "staging-xcm-builder", version = "4.0.1", default-features = false }
xcm-executor = { package = "staging-xcm-executor", version = "4.0.2", default-features = false }

# polkadot-sdk (client)
cumulus-client-cli = { version = "0.4.0" }
cumulus-client-consensus-aura = { version = "0.4.0" }
cumulus-client-consensus-common = { version = "0.4.0" }
cumulus-client-consensus-relay-chain = { version = "0.4.0" }
cumulus-client-network = { version = "0.4.0" }
cumulus-client-pov-recovery = { version = "0.4.0" }
cumulus-client-service = { version = "0.4.0" }
cumulus-relay-chain-inprocess-interface = { version = "0.4.0" }
cumulus-relay-chain-interface = { version = "0.4.0" }
cumulus-relay-chain-minimal-node = { version = "0.4.0" }
cumulus-relay-chain-rpc-interface = { version = "0.4.0" }
cumulus-test-relay-validation-worker-provider = { version = "0.1.0" }
frame-benchmarking-cli = { version = "29.0.0" }
node-inspect = { package = "staging-node-inspect", version = "0.9.0" }
pallet-transaction-payment-rpc = { version = "27.0.0" }
parachains-common = { version = "4.0.0" }
polkadot-cli = { version = "4.0.0" }
polkadot-service = { version = "4.0.0" }
sc-basic-authorship = { version = "0.31.0" }
sc-chain-spec = { version = "24.0.0" }
sc-cli = { version = "0.33.0" }
sc-client-api = { version = "25.0.0" }
sc-consensus = { version = "0.30.0" }
sc-consensus-aura = { version = "0.31.0" }
sc-consensus-grandpa = { version = "0.16.0" }
sc-consensus-manual-seal = { version = "0.32.0" }
sc-consensus-slots = { version = "0.30.0" }
sc-executor = { version = "0.29.0" }
sc-keystore = { version = "22.0.0" }
sc-network = { version = "0.31.0" }
sc-network-common = { version = "0.30.0" }
sc-network-sync = { version = "0.30.0" }
sc-offchain = { version = "26.0.0" }
sc-rpc = { version = "26.0.0" }
sc-rpc-api = { version = "0.30.0" }
sc-rpc-server = { version = "10.0.0" }
sc-service = { version = "0.32.0" }
sc-sysinfo = { version = "24.0.0" }
sc-telemetry = { version = "12.0.0" }
sc-tracing = { version = "25.0.0" }
sc-transaction-pool = { version = "25.0.0" }
sc-transaction-pool-api = { version = "25.0.0" }
sp-consensus-babe = { version = "0.29.0" }
sp-consensus-beefy = { version = "10.0.0" }
sp-consensus-grandpa = { version = "10.0.0" }
sp-rpc = { version = "23.0.0" }
substrate-build-script-utils = { version = "9.0.0" }
substrate-frame-rpc-system = { version = "25.0.0" }
substrate-prometheus-endpoint = { version = "0.16.0" }
substrate-test-utils = { version = "3.0.0" }
substrate-wasm-builder = { version = "14.0.0" }
try-runtime-cli = { version = "0.35.0" }
xcm-emulator = { version = "0.2.0" }
xcm-simulator = { version = "4.0.0" }

# Other
async-trait = { version = "0.1.76" }
bstringify = { version = "0.1.2" }
clap = { version = "=4.4.12" }
env_logger = { version = "0.10.2" }
ethabi = { version = "18.0.0", default-features = false }
ethereum = { version = "0.14.0", default-features = false, features = [
  "with-codec",
] }
futures = { version = "0.3.30" }
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "0.4.1" }
impl-trait-for-tuples = { version = "0.2.2" }
jsonrpsee = { version = "0.16.3" }
log = { version = "0.4.21", default-features = false }
num-bigint = { version = "0.4.3", default-features = false }
num-traits = { version = "0.2.18", default-features = false }
parity-scale-codec = { version = "3.6.5", default-features = false }
paste = { version = "1.0.14" }
scale-info = { version = "2.11.0", default-features = false }
serde = { version = "1.0.193", default-features = false }
serde_json = { version = "1.0.109", default-features = false }
similar-asserts = { version = "1.1.0" }
smallvec = { version = "1.13.1" }
static_assertions = { version = "1.1.0" }
strum = { version = "0.25.0", default-features = false, features = ["derive"] }
strum_macros = { version = "0.25.3" }
tiny-keccak = { version = "2.0", features = ["fips202"] }
