[workspace.package]
authors = ["WeTEE DAO"]
edition = "2021"
homepage = "https://wetee.app"
license = "Apache 2.0"
repository = "https://github.com/wetee-dao/chain"
version = "0.1.0"

[workspace]

exclude = ["native-nostd-hasher"]

members = [
  # local node
  "packages/localchain/node",
  "packages/localchain/runtime", #
  # parachain node
  "packages/parachain/node",
  "packages/parachain/runtime", #
  # pallets
  "packages/pallets/message-queue",
  "packages/pallets/wetee-org",
  "packages/pallets/wetee-sudo",
  "packages/pallets/wetee-gov",
  "packages/pallets/wetee-assets",
  "packages/pallets/wetee-guild",
  "packages/pallets/wetee-project",
  "packages/pallets/wetee-worker",
  "packages/pallets/wetee-rpc",
  "packages/pallets/wetee-rpc/runtime-api",
  "packages/pallets/wetee-treasury",
  "packages/pallets/wetee-app",
  "packages/pallets/wetee-task",
  "packages/pallets/wetee-task",
  "packages/pallets/wetee-gpu",
  "packages/pallets/wetee-dsecret", #
  # 工具
  # "tools/hash",
  # "tools/subkey",
  # "tools/chain-spec-builder",
  "packages/primitives",
]

resolver = "2"
[profile.release]
panic = "unwind"

[workspace.lints.rust]
suspicious_double_ref_op = {level = "allow", priority = 2}

[workspace.lints.clippy]
all = {level = "allow", priority = 0}
bind_instead_of_map = {level = "allow", priority = 2}# stylistic
borrowed-box = {level = "allow", priority = 2}# Reasonable to fix this one
complexity = {level = "warn", priority = 1}
correctness = {level = "warn", priority = 1}
default_constructed_unit_structs = {level = "allow", priority = 2}# stylistic
derivable_impls = {level = "allow", priority = 2}# false positives
eq_op = {level = "allow", priority = 2}# In tests we test equality.
erasing_op = {level = "allow", priority = 2}# E.g. 0 * DOLLARS
extra-unused-type-parameters = {level = "allow", priority = 2}# stylistic
identity-op = {level = "allow", priority = 2}# One case where we do 0 +
if-same-then-else = {level = "allow", priority = 2}
needless-lifetimes = {level = "allow", priority = 2}# generated code
needless_option_as_deref = {level = "allow", priority = 2}# false positives
nonminimal-bool = {level = "allow", priority = 2}# maybe
option-map-unit-fn = {level = "allow", priority = 2}# stylistic
stable_sort_primitive = {level = "allow", priority = 2}# prefer stable sort
too-many-arguments = {level = "allow", priority = 2}# (Turning this on would lead to)
type_complexity = {level = "allow", priority = 2}# raison d'etre
unit_arg = {level = "allow", priority = 2}# stylistic
unnecessary_cast = {level = "allow", priority = 2}# Types may change
useless_conversion = {level = "allow", priority = 2}# Types may change
while_immutable_condition = {level = "allow", priority = 2}# false positives
zero-prefixed-literal = {level = "allow", priority = 2}# 00_1000_000

[workspace.dependencies]
# polkadot-sdk (wasm)
cumulus-client-collator = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
cumulus-client-consensus-proposer = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
cumulus-pallet-aura-ext = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
cumulus-pallet-dmp-queue = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
cumulus-pallet-parachain-system = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
cumulus-pallet-session-benchmarking = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
cumulus-pallet-xcm = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
cumulus-pallet-xcmp-queue = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
cumulus-primitives-aura = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
cumulus-primitives-core = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
cumulus-primitives-parachain-inherent = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
cumulus-primitives-storage-weight-reclaim = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
cumulus-primitives-timestamp = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
cumulus-primitives-utility = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
cumulus-test-relay-sproof-builder = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
frame-benchmarking = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
frame-executive = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
frame-support = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
frame-system = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
frame-system-benchmarking = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
frame-system-rpc-runtime-api = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
frame-try-runtime = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-assets = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-aura = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-authority-discovery = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-authorship = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-babe = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-bags-list = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-balances = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-bounties = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-collator-selection = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-collective = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-contracts = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-conviction-voting = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-democracy = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-elections-phragmen = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-grandpa = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-identity = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-im-online = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-indices = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-insecure-randomness-collective-flip = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-membership = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-message-queue = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-multisig = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-preimage = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-proxy = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-ranked-collective = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-recovery = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-referenda = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-root-testing = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-scheduler = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-session = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-staking = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-sudo = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-timestamp = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-tips = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-transaction-payment = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-transaction-payment-rpc-runtime-api = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-treasury = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-utility = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-vesting = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-whitelist = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
pallet-xcm = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
parachain-info = {package = "staging-parachain-info", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
parachains-common = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
polkadot-core-primitives = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
polkadot-parachain-primitives = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
polkadot-primitives = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
polkadot-runtime-common = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
polkadot-runtime-parachains = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-api = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-application-crypto = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-arithmetic = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-authority-discovery = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-block-builder = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-blockchain = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-consensus = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-consensus-aura = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-consensus-slots = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-core = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-crypto-hashing = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-debug-derive = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-externalities = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-genesis-builder = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-inherents = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-io = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-keyring = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-keystore = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-maybe-compressed-blob = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-npos-elections = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-offchain = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-panic-handler = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-runtime = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-runtime-interface = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-session = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-staking = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-state-machine = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-std = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-storage = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-timestamp = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-tracing = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-transaction-pool = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-trie = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-version = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-wasm-interface = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-weights = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
substrate-fixed = {git = "https://github.com/encointer/substrate-fixed", default-features = false}
xcm = {package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
xcm-builder = {package = "staging-xcm-builder", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
xcm-executor = {package = "staging-xcm-executor", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}

# polkadot-sdk (client)
sc-consensus = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-consensus-aura = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-consensus-grandpa = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-consensus-manual-seal = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-consensus-slots = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-network-common = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-network-sync = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-rpc-api = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-rpc-server = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-service = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-sysinfo = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-telemetry = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-tracing = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-transaction-pool = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-transaction-pool-api = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sp-consensus-babe = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sp-consensus-beefy = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sp-consensus-grandpa = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0", default-features = false}
sp-rpc = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
substrate-build-script-utils = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
substrate-frame-rpc-system = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
substrate-prometheus-endpoint = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
substrate-test-utils = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
substrate-wasm-builder = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
xcm-emulator = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
xcm-simulator = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}

# cumulus
cumulus-client-cli = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
cumulus-client-consensus-aura = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
cumulus-client-consensus-common = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
cumulus-client-consensus-relay-chain = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
cumulus-client-network = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
cumulus-client-pov-recovery = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
cumulus-client-service = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
cumulus-relay-chain-inprocess-interface = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
cumulus-relay-chain-interface = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
cumulus-relay-chain-minimal-node = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
cumulus-relay-chain-rpc-interface = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
cumulus-test-relay-validation-worker-provider = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
frame-benchmarking-cli = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
node-inspect = {package = "staging-node-inspect", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
pallet-transaction-payment-rpc = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
polkadot-cli = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
polkadot-service = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-basic-authorship = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-chain-spec = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-cli = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-client-api = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-executor = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-keystore = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-network = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-offchain = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}
sc-rpc = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.13.0"}

# Other
clap = {version = "4.5.3"}
codec = {package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
  "derive",
]}
color-print = "0.3.5"
futures = {version = "0.3.30"}
jsonrpsee = {version = "0.22"}
log = {version = "0.4.20", default-features = false}
parity-scale-codec = {version = "3.6.5", default-features = false, features = ["max-encoded-len"]}
scale-info = {version = "2.10.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.195"}
serde_json = {version = "1.0.111"}
wasmtime = "8.0.1"

# Orml
orml-auction = {path = "orml/auction", default-features = false}
orml-authority = {path = "orml/authority", default-features = false}
orml-benchmarking = {path = "orml/benchmarking", default-features = false}
orml-currencies = {path = "orml/currencies", default-features = false}
orml-nft = {path = "orml/nft", default-features = false}
orml-oracle = {path = "orml/oracle", default-features = false}
orml-oracle-runtime-api = {path = "orml/oracle/runtime-api", default-features = false}
orml-parameters = {path = "orml/parameters", default-features = false}
orml-payments = {path = "orml/payments", default-features = false}
orml-rewards = {path = "orml/rewards", default-features = false}
orml-tokens = {path = "orml/tokens", default-features = false}
orml-tokens-runtime-api = {path = "orml/tokens/runtime-api", default-features = false}
orml-traits = {path = "orml/traits", default-features = false}
orml-unknown-tokens = {path = "orml/unknown-tokens", default-features = false}
orml-utilities = {path = "orml/utilities", default-features = false}
orml-vesting = {path = "orml/vesting", default-features = false}
orml-xcm = {path = "orml/xcm", default-features = false}
orml-xcm-support = {path = "orml/xcm-support", default-features = false}
orml-xtokens = {path = "orml/xtokens", default-features = false}
